samples/_failures_safe/1761071885_0d293c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e793fb5.c: In function ‘main’:
./samples/SAFE/__tmp_9e793fb5.c:159:25: error: missing terminating " character
  159 |         fprintf(stderr, "Error parsing input\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9e793fb5.c:159:9: error: expected expression at end of input
  159 |         fprintf(stderr, "Error parsing input\n
      |         ^~~~~~~
./samples/SAFE/__tmp_9e793fb5.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9e793fb5.c:159:9: error: expected declaration or statement at end of input
